--- a/src/example.css
+++ b/src/example.css
@@ -17,7 +17,7 @@ padding-right: 200px;
 width: 100%;
 height: 100%;
 border: 1px solid #ccc;
-background-image: url('http://ox2ualtw3.bkt.clouddn.com/dongman1.jpeg');
+background-image: url('http://blog-images.bestvist.com/dongman1.jpeg');
 background-size: 100% 100%;
 }
 .content-opt {
